--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,40 @@
 asgiref==3.4.1
 astroid==2.8.0
+attrs==21.2.0
+bcrypt==3.2.0
+certifi==2021.10.8
+cffi==1.14.6
+charset-normalizer==2.0.6
 click==8.0.1
+ecdsa==0.17.0
 fastapi==0.68.1
 greenlet==1.1.1
 h11==0.12.0
+idna==3.2
+iniconfig==1.1.1
 isort==5.9.3
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
+packaging==21.0
+passlib==1.7.4
 platformdirs==2.4.0
+pluggy==1.0.0
+py==1.10.0
+pyasn1==0.4.8
+pycparser==2.20
 pydantic==1.8.2
 pylint==2.11.1
+pyparsing==2.4.7
+pytest==6.2.5
+python-jose==3.3.0
+python-multipart==0.0.5
+requests==2.26.0
+rsa==4.7.2
+six==1.16.0
 SQLAlchemy==1.4.25
 starlette==0.14.2
 toml==0.10.2
 typing-extensions==3.10.0.2
+urllib3==1.26.7
 uvicorn==0.15.0
 wrapt==1.12.1
